--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "cstring": "cpp",
+        "list": "cpp",
+        "istream": "cpp"
     }
 }
